[gd_scene load_steps=5 format=3 uid="uid://crk36jktdpy0u"]

[ext_resource type="Script" uid="uid://ce3mlxa6kdfiw" path="res://scripts/Game.gd" id="1_w84de"]
[ext_resource type="Texture2D" uid="uid://cks7ir53n2jk5" path="res://assets/Background.png" id="2_nm07c"]
[ext_resource type="PackedScene" uid="uid://b33oq3fdjtaek" path="res://scenes/Player.tscn" id="3_v1q0k"]
[ext_resource type="Theme" path="res://assets/themes/main_theme.tres" id="4_theme"]

[node name="Game" type="Node2D"]
script = ExtResource("1_w84de")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nm07c")
expand_mode = 1

[node name="Player" parent="." instance=ExtResource("3_v1q0k")]

[node name="Ground" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_theme")
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerStats" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerNameLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/TopBar/PlayerStats"]
layout_mode = 2
text = "Mage: Azero"

[node name="ZoneNameLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/TopBar/PlayerStats"]
layout_mode = 2
text = "Lieu: Village"

[node name="EssenceLabel" type="Label" parent="UI/MarginContainer/VBoxContainer/TopBar/PlayerStats"]
layout_mode = 2
text = "Essence: 0"

[node name="MonsterStats" type="Label" parent="UI/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Monstre: Mannequin | HP: 100/100"
horizontal_alignment = 2

[node name="HudSpellBar" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FastTravelBar" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PauseMenu" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButtons" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Reprendre"

[node name="SaveButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Sauvegarder"

[node name="CharacterButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Personnage"

[node name="GrimoireButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Grimoire"

[node name="OptionsButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="UI/PauseMenu/MenuButtons"]
layout_mode = 2
text = "Quitter"

[node name="PauseMenu2" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/CharacterPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CharacterPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/CharacterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Personnage"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="UI/CharacterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuySlotButton" type="Button" parent="UI/CharacterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Acheter Emplacement (100 E)"

[node name="BackButton" type="Button" parent="UI/CharacterPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retour"

[node name="GrimoirePanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/GrimoirePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GrimoirePanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Grimoire"
horizontal_alignment = 1

[node name="Label" type="Label" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Emplacements Actifs"
horizontal_alignment = 1

[node name="ActiveSlotsContainer" type="HBoxContainer" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sorts Appris"
horizontal_alignment = 1

[node name="SpellbookContainer" type="GridContainer" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="BackButton" type="Button" parent="UI/GrimoirePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retour"

[node name="MagicSchoolPanel" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MagicSchoolPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MagicSchoolPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/MagicSchoolPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ã‰cole de Magie"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MagicSchoolPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="SpellList" type="VBoxContainer" parent="UI/MagicSchoolPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TransitionOverlay" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
